[package]
name = "simple_pingora_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Pingora framework
pingora = { version = "0.7.0", features = ["proxy"] }
pingora-core = "0.7.0"
pingora-proxy = { version = "0.7.0", features = ["boringssl"] }
async-trait = "0.1"
# For logging
env_logger = "0.11"
log = "0.4"
# For configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
tokio = "1.49.0"
url = "2.5"
# For rate limiting
pingora-limits = "0.7.0"
# For concurrent session store (TTL cache with bounded capacity)
moka = { version = "0.12", features = ["sync"] }
# For response body bytes
bytes = "1"
# For user-agent regex filtering
regex = "1"
# For WAF URL decoding before pattern matching
urlencoding = "2"
# For config change detection via content hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
